--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Home</title>
+    <title>TG Time Fuckers</title>
     <style>
 html, body, div, img, input, ul, li {
   margin: 0;
